[package]
name = "gameboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.27"
pixels = "0.11"
instant = "0.1"
pollster = "0.2"
num-traits = "0.2"

# log = "0.4"
# simple_logger = "1"

# rfd = "0.10"
# bevy_tasks = "0.9"
# futures-lite = "1"

# egui = "0.20"
# egui-winit = "0.20"
# egui-wgpu = "0.20"